chore: normalize scripts and header pipeline for Convoy

--- a/.gitignore
+++ b/.gitignore
@@ -59,7 +59,7 @@ logs/
 # ==========================================
 # Project Specific / Temporary Workspace
 # ==========================================
-YOROZU_PROJECT/
+Convoy_PROJECT/
 tmp/
 
 # ==========================================
