chore: rename crop script and add header crop command

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "header:crop": "pwsh ./scripts/crop-header.ps1 -InputPath assets/header.png -OutputPath assets/header_cropped.png -Force",
     "header:add-text": "pwsh ./scripts/add-text-to-header.ps1 -Force"
   },
   "license": "ISC",
