feat: add strong UX smoke test gates and auto-generate review.md for UI prompts

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,7 @@ release_notes.md
 # ==========================================
 assets/header*.png
 
+# ==========================================
+# UI prompt runs (generated logs)
+# ==========================================
+ui-lab/runs/
