docs: track Antigravity control spec

--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,9 @@ ANTIGRAVITY_AGENT_CONTROL_SPEC copy.MD
 COMMIT_MSG.txt
 release_notes.md
 
+!ANTIGRAVITY_AGENT_CONTROL_SPEC.MD
+!ANTIGRAVITY_AGENT_CONTROL_SPEC.md
+
 # ==========================================
 # Generated headers
 # ==========================================
