--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "1.0.0",
   "type": "module",
   "private": true,
-  "description": "",
+  "description": "Mission Control workspace scripts (header build, release assets, tooling).",
   "scripts": {
     "header:crop": "node ./scripts/header-crop.mjs --in assets/header.png --out assets/header_cropped.png --w 1600 --h 420",
     "header:add-text": "node ./scripts/header-add-text.mjs --in assets/header_cropped.png --out assets/header_cropped_text.png --title \"Convoy\" --subtitle \"Mission Control workspace for agentic development\"",
-    "header:build": "pnpm run header:crop && pnpm run header:add-text",
-    "legacy:header:crop:ps1": "powershell -ExecutionPolicy Bypass -File ./scripts/crop-header.ps1 -InputPath assets/header.png -OutputPath assets/header_cropped.png -Force",
-    "legacy:header:add-text:ps1": "powershell -ExecutionPolicy Bypass -File ./scripts/add-text-to-header.ps1 -InputPath assets/header_cropped.png -OutputPath assets/header_cropped_text.png -Force"
+    "header:build": "pnpm run header:verify && pnpm run header:crop && pnpm run header:add-text",
+    "header:clean": "node -e \"const fs=require('fs');['assets/header_cropped.png','assets/header_cropped_text.png'].forEach(p=>{try{fs.rmSync(p,{force:true});}catch(e){}});\"",
+    "header:verify": "node -e \"const fs=require('fs');const req=['assets/header.png','assets/header_cropped.png','assets/header_cropped_text.png'];const miss=req.filter(p=>!fs.existsSync(p));if(miss.length){console.error('Missing:',miss.join(', '));process.exit(1);}console.log('OK:',req.join(', '));\""
   },
   "license": "ISC",
   "packageManager": "pnpm@10.26.2",
   "dependencies": {
     "@fal-ai/client": "^1.8.1",
     "sharp": "^0.34.1"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
