--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
-"node-linker=hoisted" | Out-File -Encoding utf8 .npmrc
-
+shamefully-hoist=true
+auto-install-peers=true
+strict-peer-dependencies=false
